hphp/hack/test/typecheck/shapes_cc_7.php.exp
File "shapes_cc_7.php", line 20, characters 3-7:
A shape field name must be an `int` or `string` (Typing[4052])
File "shapes_cc_7.php", line 14, characters 9-12:
Not a bool
File "shapes_cc_7.php", line 20, characters 3-7:
Shape field name is a bool class constant (Typing[4086])
File "shapes_cc_7.php", line 19, characters 3-7:
But expected a string
